--- a/application.properties
+++ b/application.properties
@@ -1,2 +1,4 @@
-dbuser=debiprasadpadhi2580@gmail.com
-password=cendrela
+spring.datasource.url=jdbc:mysql://localhost:3306/
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
